# regression

./: .gitignore
Regression/: CMakeLists.txt  vcpkg.json
Regression/src/: main.cpp  main.hpp
SKSE/Plugins/: SkyrimUncapper.ini
